--- a/css/style.css
+++ b/css/style.css
@@ -257,10 +257,8 @@ p {
 
 @media screen and (max-width: 768px) {
   .recetas {
-    display: grid;
-    grid-template-columns: 350px;
-    padding: 10px;
-    justify-content: center; }
+    display: inline-block;
+    margin: 10px; }
     .recetas .videos {
       width: 95%;
       height: auto; }
