--- a/scss/style.scss
+++ b/scss/style.scss
@@ -352,7 +352,7 @@ p {
 @media screen and (max-width: 768px) {
 	.recetas {
 		display:inline-block;
-		margin: 10px;
+		padding: 8px;
 		.videos {
 			width: 95%;	
 			height: auto;
