--- a/scss/style.scss
+++ b/scss/style.scss
@@ -353,6 +353,7 @@ p {
 	.recetas {
 		display:inline-block;
 		padding: 8px;
+		align-self: center;
 		.videos {
 			width: 95%;	
 			height: auto;
