--- a/scss/style.scss
+++ b/scss/style.scss
@@ -353,7 +353,7 @@ p {
 	.recetas {
 		display:inline-block;
 		padding: 8px;
-		text-align: center;
+		justify-content: center;
 		.videos {
 			width: 95%;	
 			height: auto;
