--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ p {
   .recetas {
     display: inline-block;
     padding: 8px;
-    text-align: center; }
+    justify-content: center; }
     .recetas .videos {
       width: 95%;
       height: auto; }
