--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ p {
 
 @media screen and (max-width: 768px) {
   .recetas {
-    display: inline-block;
+    display: flex;
     padding: 8px;
     justify-content: center; }
     .recetas .videos {
