--- a/scss/style.scss
+++ b/scss/style.scss
@@ -358,10 +358,10 @@ p {
 		.videos {
 			width: 95%;	
 			height: auto;
+			justify-items: center;
 			iframe {
 				width: 90vw;
 				height: auto;
-				align-items: center;
 			}
 		}
 	}	
