--- a/scss/style.scss
+++ b/scss/style.scss
@@ -355,10 +355,11 @@ p {
 		padding: 8px;
 		justify-content: center;
 		flex-direction: column;
+		text-align: center;
+		align-content: center;
 		.videos {
 			width: 95%;	
 			height: auto;
-			justify-items: center;
 			iframe {
 				width: 90vw;
 				height: auto;
