--- a/scss/style.scss
+++ b/scss/style.scss
@@ -108,6 +108,7 @@ p {
 		@include displaytitulos;
 		margin: 20px 0px 0px 0px;
 		font-size:15px;
+		font-weight:500;
 	}
 }
 /* cierre titulos y parrafo */
