--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,8 @@ p {
       text-align: center;
       padding: 5px;
       margin: 20px 0px 0px 0px;
-      font-size: 15px; } }
+      font-size: 15px;
+      font-weight: 500; } }
 
 /* cierre titulos y parrafo */
 /* inicio footer */
@@ -160,8 +161,8 @@ p {
       align-self: center;
       font-size: 14px; }
     .tortas .info-tortas .img-tortas {
-      height: 120px;
-      width: 120px;
+      height: 150px;
+      width: 150px;
       object-fit: cover;
       align-self: center;
       border-radius: 15%;
@@ -189,8 +190,8 @@ p {
         align-self: center;
         font-size: 14px; }
       .tortas .info-tortas .img-tortas {
-        height: 120px;
-        width: 120px;
+        height: 150px;
+        width: 150px;
         object-fit: cover;
         align-self: center;
         border-radius: 15%;
@@ -202,49 +203,11 @@ p {
 
 /* cierre tortas */
 /* inicio cupcakes */
-.cupcakes {
-  display: grid;
-  grid-template-columns: 120px 400px;
-  grid-column-gap: 10px;
-  margin: 20px 0px 10px 10px; }
-  .cupcakes span {
-    align-self: center; }
-  .cupcakes .img-cupcakes {
-    height: 120px;
-    width: 120px;
-    object-fit: cover;
-    border-radius: 15%;
-    transition-property: background, border-radius;
-    transition-duration: 1s;
-    transition-timing-function: linear; }
-  .cupcakes .img-cupcakes:hover {
-    border-radius: 50%; }
+img .card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: contain; }
 
-@media screen and (max-width: 768px) {
-  .cupcakes {
-    display: grid;
-    grid-template-columns: 130px 200px;
-    grid-template-rows: 150px;
-    grid-column-gap: 6px;
-    justify-content: center;
-    align-content: center; }
-    .cupcakes span {
-      width: 100%;
-      align-self: center;
-      font-size: 14px; }
-    .cupcakes .img-cupcakes {
-      height: 120px;
-      width: 120px;
-      object-fit: cover;
-      border-radius: 15%;
-      transition-property: background, border-radius;
-      transition-duration: 1s;
-      transition-timing-function: linear;
-      align-self: center; }
-    .cupcakes .img-cupcakes:hover {
-      border-radius: 50%; } }
-
-/* cierre cupcakes */
 /* inicio recetas */
 .recetas {
   display: grid;
