--- a/scss/style.scss
+++ b/scss/style.scss
@@ -234,80 +234,16 @@ p {
 	}
 }
 /* cierre tortas */
+/* inicio cupcakes */
 
 
-/* cupcakes cards */
-.card-text {
-	p {
-		text-align: center;
-		overflow-wrap: break-word !important;
-	}
+
+img .card-img-top {
+	width: 100%;
+	height: 15vw;
+	object-fit: contain;
 }
 
-
-
-/* inicio cupcakes
-.cupcakes{
-	display:grid;
-	grid-template-columns: 1fr 2fr 1fr 2fr;
-	grid-column-gap: 10px;
-	margin: 20px 0px 10px 10px;
-
-	span {
-		align-self: center;
-	}
-
-	.img-cupcakes {
-		height: $image-height;
-		width: $image-width;
-		object-fit: cover;
-		border-radius: 15%;
-		transition-property: background, border-radius;
-		transition-duration: 1s;
-		transition-timing-function: linear;
-	}
-	
-	  .img-cupcakes:hover {
-		border-radius: 50%;
-	}
-
-	.btn btn-outline-primary {
-		height: 14px;
-		font-size: 10px;
-		color: $primary-color;
-	} 
-}
-
-@media screen and (max-width: 768px) {
-	.cupcakes{
-		display: grid;
-		grid-template-columns: 130px 200px;
-		grid-template-rows: 150px;
-		grid-column-gap: 6px;
-		justify-content: center;
-		align-content: center;
-	
-		span {
-			@include spanmobileproductos;
-		}
-	
-		.img-cupcakes {
-			height: $image-height;
-			width: $image-width;
-			object-fit: cover;
-			border-radius: 15%;
-			transition-property: background, border-radius;
-			transition-duration: 1s;
-			transition-timing-function: linear;
-			align-self: center;
-		}
-		
-		  .img-cupcakes:hover {
-			border-radius: 50%;
-		}
-	}
-}
-cierre cupcakes */
 
 /* inicio recetas */
 .recetas {
