--- a/scss/style.scss
+++ b/scss/style.scss
@@ -107,7 +107,7 @@ p {
 	@media screen and (max-width: 768px) {
 		@include displaytitulos;
 		margin: 20px 0px 0px 0px;
-		font-size:15px;
+		font-size:18px;
 		font-weight:500;
 	}
 }
@@ -161,89 +161,20 @@ p {
 }
 /* cierre index */
 
-/* inicio tortas */
-.tortas {
-	display:grid;
-	margin: 40px 0px 0px 20px;
-	grid-template-columns: 390px 390px;
-	grid-template-rows: repeat (4, 200px);
-	grid-row-gap: 5px;
-	grid-column-gap: 10px;
-	.info-tortas {
-		display: grid;
-		grid-template-columns: 120px 260px;
-		grid-template-rows: 150px;
-		grid-column-gap: 6px;
-		align-self: center;
-	
-		span {
-			align-self: center;
-			font-size: 14px;
-		}
-
-		.img-tortas {
-			height: $image-height;
-			width: $image-width;
-			object-fit: cover;
-			align-self: center;
-			border-radius: 15%;
-			transition-property: background, border-radius;
-			transition-duration: 1s;
-			transition-timing-function: linear;
-		}
-		
-		.img-tortas:hover {
-		   border-radius: 50%;
-		}
+/* inicio cards tortas y cupcakes */
+.row {
+	margin:10px;
+	.card-body {
+		text-align: center;
+	}
+	p {
+		width:auto;
+	}
+	.btn {
+		background-color: $primary-color;
 	}
 }
-
-@media screen and (max-width: 768px) {
-	.tortas {
-		display:grid;
-		margin: 20px 0px 0px 20px;
-		grid-template-columns: 80%;
-		grid-template-rows: repeat (8, 200px);
-		grid-row-gap: 5px;
-			.info-tortas {
-			display: grid;
-			grid-template-columns: 1fr 200px;
-			grid-template-rows: 150px;
-			grid-column-gap: 6px;
-			align-self: center;
-		
-			span {
-				@include spanmobileproductos;
-			}
-	
-			.img-tortas {
-				height: $image-height;
-				width: $image-width;
-				object-fit: cover;
-				align-self: center;
-				border-radius: 15%;
-				transition-property: background, border-radius;
-				transition-duration: 1s;
-				transition-timing-function: linear;
-			}
-			
-			.img-tortas:hover {
-			   border-radius: 50%;
-			}
-		}
-	}
-}
-/* cierre tortas */
-/* inicio cupcakes */
-
-
-
-img .card-img-top {
-	width: 100%;
-	height: 15vw;
-	object-fit: contain;
-}
-
+/* fin cards tortas y cupcakes */
 
 /* inicio recetas */
 .recetas {
