--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ p {
       text-align: center;
       padding: 5px;
       margin: 20px 0px 0px 0px;
-      font-size: 15px;
+      font-size: 18px;
       font-weight: 500; } }
 
 /* cierre titulos y parrafo */
@@ -143,71 +143,17 @@ p {
     align-content: center; } }
 
 /* cierre index */
-/* inicio tortas */
-.tortas {
-  display: grid;
-  margin: 40px 0px 0px 20px;
-  grid-template-columns: 390px 390px;
-  grid-template-rows: repeat 4, 200px;
-  grid-row-gap: 5px;
-  grid-column-gap: 10px; }
-  .tortas .info-tortas {
-    display: grid;
-    grid-template-columns: 120px 260px;
-    grid-template-rows: 150px;
-    grid-column-gap: 6px;
-    align-self: center; }
-    .tortas .info-tortas span {
-      align-self: center;
-      font-size: 14px; }
-    .tortas .info-tortas .img-tortas {
-      height: 150px;
-      width: 150px;
-      object-fit: cover;
-      align-self: center;
-      border-radius: 15%;
-      transition-property: background, border-radius;
-      transition-duration: 1s;
-      transition-timing-function: linear; }
-    .tortas .info-tortas .img-tortas:hover {
-      border-radius: 50%; }
+/* inicio cards tortas y cupcakes */
+.row {
+  margin: 10px; }
+  .row .card-body {
+    text-align: center; }
+  .row p {
+    width: auto; }
+  .row .btn {
+    background-color: rebeccapurple; }
 
-@media screen and (max-width: 768px) {
-  .tortas {
-    display: grid;
-    margin: 20px 0px 0px 20px;
-    grid-template-columns: 80%;
-    grid-template-rows: repeat 8, 200px;
-    grid-row-gap: 5px; }
-    .tortas .info-tortas {
-      display: grid;
-      grid-template-columns: 1fr 200px;
-      grid-template-rows: 150px;
-      grid-column-gap: 6px;
-      align-self: center; }
-      .tortas .info-tortas span {
-        width: 100%;
-        align-self: center;
-        font-size: 14px; }
-      .tortas .info-tortas .img-tortas {
-        height: 150px;
-        width: 150px;
-        object-fit: cover;
-        align-self: center;
-        border-radius: 15%;
-        transition-property: background, border-radius;
-        transition-duration: 1s;
-        transition-timing-function: linear; }
-      .tortas .info-tortas .img-tortas:hover {
-        border-radius: 50%; } }
-
-/* cierre tortas */
-/* inicio cupcakes */
-img .card-img-top {
-  width: 100%;
-  height: 15vw;
-  object-fit: contain; }
-
+/* fin cards tortas y cupcakes */
 /* inicio recetas */
 .recetas {
   display: grid;
