--- a/scss/style.scss
+++ b/scss/style.scss
@@ -143,8 +143,8 @@ p {
 			transition: width 2s, height 2s;
 		}
 		.imgindex:hover {
-			width: 275px;
-			height: 275px;
+			width: 300px;
+			height: 300px;
 		}
 	}
 }
@@ -256,6 +256,10 @@ p {
 		.datos_contacto {
 			justify-content: center;
 		}
+	}
+	
+	.formulario {
+		margin-top: 70px;
 	}
 }
 /* cierre contacto */
