--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin displayindex {
 	display: inline-block;
-	width: 25%;
-	height: 200px;
+	width: 300px;
+	height: 300px;
 	padding: 10px;
 	margin: 10px;
 }
